# win-bluetooth

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  appveyor.yml
include/: Bluetooth.h  QStringHash.h  bluetoothAddress.h  bluetoothDevice.h  bluetoothDeviceDiscoveryAgent.h  bluetoothDeviceInfo.h  bluetoothEnums.h  bluetoothException.h  bluetoothHostInfo.h  bluetoothLocalDevice.h  bluetoothRadio.h  bluetoothServer.h  bluetoothServiceDiscoveryAgent.h  bluetoothServiceInfo_p.h  bluetoothServiceinfo.h  bluetoothSocket.h  bluetoothSocket_p.h  bluetoothTransferManager.h  bluetoothTransferReply.h  bluetoothTransferRequest.h  bluetoothUtils.h  bluetoothUuids.h  obexHeader.h  obexOperation.h  obexOptionalHeaders.h  obexRequest.h  obexResponse.h  win-bluetooth
resources/: resources.qrc  words-short.txt
src/: Bluetooth.cpp  appinfo.h.in  bluetoothAddress.cpp  bluetoothDevice.cpp  bluetoothDeviceDiscoveryAgent.cpp  bluetoothDeviceInfo.cpp  bluetoothException.cpp  bluetoothHostInfo.cpp  bluetoothLocalDevice.cpp  bluetoothRadio.cpp  bluetoothServer.cpp  bluetoothServiceDiscoveryAgent.cpp  bluetoothServiceInfo.cpp  bluetoothSocket.cpp  bluetoothSocket_p.cpp  bluetoothTransferManager.cpp  bluetoothTransferReply.cpp  bluetoothTransferRequest.cpp  bluetoothUtils.cpp  bluetoothUuids.cpp  main.cpp  obexHeader.cpp  obexOperation.cpp  obexOptionalHeaders.cpp  obexRequest.cpp  obexResponse.cpp
tests/: CMakeLists.txt  main.cpp
